--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,5 +1,5 @@
 <div class="ui two column centered grid">
   <div class="column">
-    <h1>This is home page</h1>
+    <h1>This is chatroom</h1>
   </div>
 </div>
