--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,16 @@
 
-<div class="ui three segment large item menu">
+<div class="ui four segment large item menu">
   <%= link_to "Home", root_path, class: "item large" %>
   <%= link_to "Go to chatroom", chatroom_path, class: "item large" %>
-  <%= link_to "Login", login_path, class: "item large" %>
+
+  <div class="item large">
+    <div class="ui dropdown">
+      <i class="dropdown icon"></i>
+      <div class="text">Account</div>
+      <div class="menu">
+        <%= link_to "Login", login_path, class: "item large" %>
+        <div class="item large">Female</div>
+      </div>
+    </div>
+  </div>
 </div>
