add grid and styling to chatbox

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<div class="ui two column centered grid">
-  <div class="column">
-    <h1>This is home page</h1>
-  </div>
-</div>
+<h2 class="ui center aligned icon header">
+  <i class="blue bullhorn icon"></i>
+  Friends
+</h2>
