--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,1 @@
-<h2 class="ui center aligned icon header">
-  <i class="blue bullhorn icon"></i>
-  Friends
-</h2>
+<h1>The same as about page. Just an intermediate place</h1>
