--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,27 @@
 @import 'semantic-ui';
+@import 'semantic-ui/collections/menu';
 
 .chatbox {
-  height: 550px;
+  height: 650px;
+}
+
+.mt-40 {
+  margin-top:40px !important;
+}
+
+.mb-30 {
+  margin-bottom:30px !important;
+}
+
+.message.closable {
+  margin-left: 20%;
+  margin-right: 20%;
+ }
+
+.ht-60 {
+  height: 60px;
+}
+
+.wdt-600 {
+  width: 600px !important;
 }
