--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,19 @@
 
-<div class="ui four segment large item menu">
+<div class="ui four segment large item menu ht-60">
   <%= link_to "Home", root_path, class: "item large" %>
   <%= link_to "Go to chatroom", chatroom_path, class: "item large" %>
 
   <div class="item large">
-    <div class="ui dropdown">
+    <div class="ui dropdown item">
       <i class="dropdown icon"></i>
       <div class="text">Account</div>
       <div class="menu">
-        <%= link_to "Login", login_path, class: "item large" %>
-        <div class="item large">Female</div>
+        <% if !logged_in? %>
+          <%= link_to "Login", login_path, class: "item large" %>
+          <%= link_to 'Sign up', signup_path, class: "item large" %>
+        <% else %>
+          <%= link_to "Logout", logout_path, class: "item large", method: :delete %>
+        <% end %>
       </div>
     </div>
   </div>
