add channel, subscribed, create route mount actioncable

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,3 +25,12 @@
 .wdt-600 {
   width: 600px !important;
 }
+
+.wdt-450 {
+  width: 450px !important;
+}
+
+.ht100wd100 {
+  height: 100%;
+  width: 100%;
+}
