--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,27 +3,27 @@
 
 <div class="ui center aligned grid mt-40">
   <%= form_with(model: @user, local: true) do |f| %>
-    <div class="ui placeholder segment">
-      <div class="column">
-        <div class="ui form wdt-600">
-          <div class="field">
+    <div class="ui placeholder segment center page grid">
+      <div class="column center page grid">
+        <div class="ui form wdt-600 center">
+          <div class="field center">
             <%= f.label :username  %>
-            <div class="ui left icon input wdt-600">
-              <%= f.text_field :username, class: "form-control text-center wdt-600", placeholder: "enter username" %>
+            <div class="ui left icon input wdt-450">
+              <%= f.text_field :username, class: "form-control center", placeholder: "enter username" %>
               <i class="user icon"></i>
             </div>
           </div>
           <div class="field">
             <%= f.label :password  %>
-            <div class="ui left icon input">
+            <div class="ui left icon input wdt-450">
               <%= f.password_field :password, class: "form-control text-center", placeholder: 'enter password' %>
               <i class="lock icon"></i>
             </div>
           </div>
         </div>
       </div>
-      <div class="middle aligned column">
-        <%= f.submit "Sign Up", class: "ui big button mt-40" %>
+      <div class="column center page grid">
+        <%= f.submit "Sign Up", class: "ui big blue button mt-40" %>
       </div>
     </div>
   <% end %>
