--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -3,7 +3,7 @@
 <div class="ui two column page grid">
   <div class="left floated twelve wide column">
     <div class="ui fluid raised card chatbox">
-      <div class="content">
+      <div class="content" id="messages">
         <div class="ui large feed" id="message-container">
           <%= render @messages %>
         </div>
