fix autoscroll and submit message

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="event">
-  <div class="label">
+  <!-- <div class="label">
     <img src="/images/avatar/small/elliot.jpg">
-  </div>
+  </div> -->
   <div class="content">
     <div class="summary">
       <a class="user">
